--- a/MvvmTools.Core/packages.config
+++ b/MvvmTools.Core/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AvalonEdit" version="5.0.2" targetFramework="net451" />
   <package id="CacheCow.Client" version="1.0.0" targetFramework="net451" />
   <package id="CacheCow.Common" version="1.0.0" targetFramework="net451" />
   <package id="CommonServiceLocation" version="1.0.0" targetFramework="net45" />
   <package id="DynamicDataDisplayWpf" version="0.4.0" targetFramework="net45" />
+  <package id="Extended.Wpf.Toolkit" version="2.5" targetFramework="net451" />
   <package id="JetBrains.Annotations" version="9.1.1" targetFramework="net45" />
   <package id="LiveSDKHelper" version="0.1.0.8" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net451" />
