--- a/MvvmTools.Core/MvvmTools.Core.csproj
+++ b/MvvmTools.Core/MvvmTools.Core.csproj
@@ -41,14 +41,6 @@
     <AssemblyOriginatorKeyFile>MvvmToolsCoreKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CacheCow.Client, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CacheCow.Client.1.0.0\lib\net40\CacheCow.Client.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="CacheCow.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CacheCow.Common.1.0.0\lib\net40\CacheCow.Common.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="DynamicDataDisplay, Version=0.4.0.0, Culture=neutral, PublicKeyToken=5b7d744a7263923f, processorArchitecture=MSIL">
       <HintPath>..\packages\DynamicDataDisplayWpf.0.4.0\lib\DynamicDataDisplay.dll</HintPath>
       <Private>True</Private>
@@ -118,7 +110,9 @@
       <HintPath>..\packages\Microsoft.CodeAnalysis.Workspaces.Common.1.0.0\lib\net45\Microsoft.CodeAnalysis.Workspaces.Desktop.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.CSharp">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Microsoft.Expression.Interactions, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=59d6d24383174ac4, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocation.1.0.0\lib\Microsoft.Practices.ServiceLocation.dll</HintPath>
@@ -262,10 +256,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.4.0.30506.0\lib\net40\System.Net.Http.Formatting.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Reactive.Core">
       <HintPath>..\lib\System.Reactive.Core.dll</HintPath>
@@ -350,24 +340,31 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviors\FolderDialogBehavior.cs" />
+    <Compile Include="Controls\BindingEvaluator.cs" />
     <Compile Include="Controls\ComboBoxEx.cs" />
     <Compile Include="Controls\DialogPageElementHost.cs" />
+    <Compile Include="Controls\ISuggestionsProvider.cs" />
+    <Compile Include="Controls\LimitedCollectionView.cs" />
+    <Compile Include="Controls\LimitedListCollectionView.cs" />
     <Compile Include="Controls\TextBoxEx.cs" />
     <Compile Include="Controls\UIElementDialogPage.cs" />
     <Compile Include="Converters\BoolInvertedConverter.cs" />
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
+    <Compile Include="Converters\EmptyToCollapsedConverter.cs" />
     <Compile Include="Converters\FalseToVisibleConverter.cs" />
     <Compile Include="Converters\NullToCollapsedConverter.cs" />
     <Compile Include="Converters\NullToVisibleConverter.cs" />
     <Compile Include="Converters\ProjectDisplayNameConverter.cs" />
     <Compile Include="Converters\ZeroToCollapsedConverter.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Models\AssemblyQualifiedType.cs" />
     <Compile Include="Models\CDataWrapper.cs" />
     <Compile Include="Models\Enums.cs" />
     <Compile Include="Models\Field.cs" />
     <Compile Include="Models\Template.cs" />
     <Compile Include="Services\IOutputService.cs" />
     <Compile Include="Services\ITemplateService.cs" />
+    <Compile Include="Utilities\Async.cs" />
     <Compile Include="Utilities\NativeMethods.cs" />
     <Compile Include="Utilities\NinjectServiceLocator.cs" />
     <Compile Include="Utilities\ProjectExtensions.cs" />
@@ -429,7 +426,7 @@
     <Compile Include="Views\FieldValuesUserControl.xaml.cs">
       <DependentUpon>FieldValuesUserControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\FieldValuesUserControlViewModel.cs" />
+    <Compile Include="ViewModels\FieldValuesUserControlViewModel.cs" />
     <Compile Include="Views\HeaderUserControl.xaml.cs">
       <DependentUpon>HeaderUserControl.xaml</DependentUpon>
     </Compile>
@@ -601,7 +598,9 @@
     <Folder Include="Attached\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="InternalTemplates.xml" />
+    <EmbeddedResource Include="InternalTemplates.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.VisualStudio.SDK.VsixSuppression.14.0.50430-pre\build\Microsoft.VisualStudio.SDK.VsixSuppression.targets" Condition="Exists('..\packages\Microsoft.VisualStudio.SDK.VsixSuppression.14.0.50430-pre\build\Microsoft.VisualStudio.SDK.VsixSuppression.targets')" />
