Added a Readme.txt to describe the debug arguments.

--- a/MvvmTools/MvvmTools.csproj
+++ b/MvvmTools/MvvmTools.csproj
@@ -406,6 +406,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="Readme.txt" />
     <Content Include="Resources\GoToViewOrViewModelCommand.png" />
     <Content Include="Resources\MvvmToolsPackage.ico" />
   </ItemGroup>
