--- a/MvvmTools/packages.config
+++ b/MvvmTools/packages.config
@@ -37,6 +37,7 @@
   <package id="Microsoft.VisualStudio.Threading" version="14.0.50522-pre" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Utilities" version="14.0.23107" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Validation" version="14.0.50417-pre" targetFramework="net45" />
+  <package id="Microsoft.VSSDK.BuildTools" version="15.0.26201" targetFramework="net452" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
