--- a/MvvmTools/packages.config
+++ b/MvvmTools/packages.config
@@ -3,6 +3,7 @@
   <package id="AvalonEdit" version="5.0.2" targetFramework="net451" />
   <package id="CommonServiceLocation" version="1.0.0" targetFramework="net45" />
   <package id="DynamicDataDisplayWpf" version="0.4.0" targetFramework="net45" />
+  <package id="Expression.Interaction" version="3.0.40218.0" targetFramework="net452" />
   <package id="Extended.Wpf.Toolkit" version="2.5" targetFramework="net451" />
   <package id="JetBrains.Annotations" version="9.1.1" targetFramework="net45" />
   <package id="LiveSDKHelper" version="0.1.0.8" targetFramework="net45" />
